assets/css/extended/custom.css
body {
  font-family: "Inria Sans";
  font-size: 13pt;
  line-height: 1.4em;
}

.katex {
  font-size: 1.2em !important;
}


section {
  padding-top: .25em;
  padding-bottom: .25em;
  padding-left: .5em;
}

h1,
h2,
h3,
h4 {
  margin-top: .5em;
}

.block.splice {
  padding-top: 1em;
}

.block:hover {
  background-color: rgba(0, 100, 255, 0.04);
}

.dark .block:hover {
  background-color: rgba(255, 255, 255, 0.04);
}

article a:hover {
  background-color: rgba(0, 100, 255, 0.1);
}

.dark article a:hover {
  background-color: rgba(255, 255, 255, 0.1);
}


.block > .block-uid {
  visibility: hidden;
  display: flex;
  justify-content: flex-end;
}

.block:hover > .block-uid {
  visibility: visible;
}

.dark img.latex {
  filter: invert(1);
}

.slug {
  color: gray;
}

.error {
  color: rgb(255, 50, 50, .8);
}

details > summary > * {
  display: inline;
}


details > summary {
  list-style-type: '▸';
}

details[open] > summary {
  list-style-type: '▾';
}

details > summary::marker{
  color: gray;
}

details > summary > h1 {
  font-size: 1em !important;
}

.block > .toggle-children-button {
  padding-right: 3pt;
  visibility: hidden;
  float: right;
}

.block:hover > .toggle-children-button {
  visibility: visible;
}

.dark .toggle-children-button {
  filter: invert(1);
}

a.local, a.slug {
  box-shadow: none !important;
  text-decoration: underline;
  text-decoration-style: dotted;
}

